// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test patterns/examples styled snapshot test with @testing-library/react 1`] = `
<DocumentFragment>
  .c0 {
  color: red;
}

<button
    class="c0"
    data-testid="my-button-to-test"
  />
</DocumentFragment>
`;

exports[`Test patterns/examples styled snapshot with react-test-renderer and style rule test 1`] = `
.c0 {
  color: red;
}

<button
  className="c0"
  data-testid="my-button-to-test"
/>
`;
